fix: align exo cache preload behavior